--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,6 @@ font-family: 'Bebas Neue', sans-serif;
 font-family: 'Poppins', sans-serif;
 font-family: 'Roboto Condensed', sans-serif;
 
-264653 2A9D8F  E9C46A F4A261 E76F51
-
-
 */
 
 :root {
@@ -23,6 +20,9 @@ font-family: 'Roboto Condensed', sans-serif;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+html {
+  scroll-behavior: smooth;
 }
 
 a {
@@ -63,12 +63,10 @@ body {
   position: relative;
 }
 
-.section-title{
+.section-title {
   text-align: center;
-  padding-top: .9rem;
+  padding-top: 0.9rem;
 }
-
-
 
 .splide__pagination__page.is-active {
   background: var(--red-sec-color) !important;
@@ -101,13 +99,13 @@ body {
   }
 }
 
-/** LOADER SPINNER */
+/** ------------LOADER SPINNER ----------------*/
 .loader-container {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 16rem;
+  height: 100vh;
   text-align: center;
 }
 .loader {
